tests/fixtures/valid/single-quotes.php
<?php

declare(strict_types=1);

echo 'single quotes';
