tests/fixtures/invalid/cast-space.php
<?php

$x = (bool) 23;
